# hawaii-emperor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: etopo_north_pacific.npz  seamount_ages.csv
scripts/: generate_hawaii_emperor_figure.py  prepare_etopo_crop.py
src/: catalog.py  geometry.py  plotting.py
tests/: test_catalog.py  test_geometry.py  test_plotting.py
