[project]
name = "hawaii-emperor"
version = "0.1.0"
description = "The 47 Ma kink in the Hawaii–Emperor seamount chain as a record of Pacific plate motion change"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[project.optional-dependencies]
map = [
    "cartopy>=0.22",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
